kubernetes/apps/infra-cluster/monitoring/pulse-infra/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pulse-internal
  namespace: monitoring
  annotations:
    gethomepage.dev/description: "Infrastructure monitoring (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Infra Cluster - monitoring"
    gethomepage.dev/href: "http://pulse.krapulax.home"
    gethomepage.dev/icon: "mdi-heart-pulse"
    gethomepage.dev/name: "Pulse (internal)"
    gethomepage.dev/weight: "20"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - pulse.krapulax.home
    - pulse-infra.monitoring.svc.cluster.local
  rules:
    - backendRefs:
        - name: pulse
          namespace: monitoring
          port: 7655
